--- a/git2.html
+++ b/git2.html
@@ -30,6 +30,9 @@ textarea{
   height:90%;
   font: 0.7em Arial, Helvetica, sans-serif;
 }
+textarea:focus .ins_box{
+  display:"block";
+}
 *{margin:0px;padding:0px;}
 input[onclick^="ins"] {
   margin:0px;
