--- a/git2.html
+++ b/git2.html
@@ -237,6 +237,7 @@ window.onload=function(){
   window.onresize();
 }
 window.onresize=function(){
+alert()
   //window.innerHeight<400?show_ins():hide_ins();
   var wh=window.innerHeight;
   var ctr_h=parseInt(window.getComputedStyle(control_box).height);
