--- a/git2.html
+++ b/git2.html
@@ -237,12 +237,14 @@ window.onload=function(){
   window.onresize();
 }
 window.onresize=function(){
-alert()
+alert(1)
   //window.innerHeight<400?show_ins():hide_ins();
   var wh=window.innerHeight;
   var ctr_h=parseInt(window.getComputedStyle(control_box).height);
   var page_h=parseInt(window.getComputedStyle(page_box).height);
+alert(2)
   var ins_h=parseInt(window.getComputedStyle(ins_box).height)||0;
+alert(3)
   //var edit_h=parseInt(window.getComputedStyle(edit_box).height);
   //alert(window.getComputedStyle(ins_box).height);
   alert()
