--- a/git2.html
+++ b/git2.html
@@ -53,10 +53,11 @@ input[value^="page"] {
   white-space:nowrap;
   position:fixed;
   bottom:0px;
-  display:none;
+  //display:none;
 }
 .control_box{
   width:100%;
+height:auto;
   overflow-x:scroll;
   //position:fixed;
   //top:0px;
@@ -237,7 +238,6 @@ window.onload=function(){
   window.onresize();
 }
 window.onresize=function(){
-alert(1)
   //window.innerHeight<400?show_ins():hide_ins();
   var wh=window.innerHeight;
   var ctr_h=parseInt(window.getComputedStyle(control_box).height);
@@ -258,7 +258,7 @@ alert(1)
   document.head.appendChild(link);
   */
   //edit_box.style.marginBottom=ctr_h+"px;
-  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
   
 }
 
