--- a/git2.html
+++ b/git2.html
@@ -57,14 +57,14 @@ input[value^="page"] {
 }
 .control_box{
   width:100%;
-height:auto;
+height:24px;
   overflow-x:scroll;
   //position:fixed;
   //top:0px;
 }
 .page_box{
   width:100%;
-  //height:23px;
+  height:23px;
   //position:fixed;//absolute;
   //top:20px;
   //margin-top:20px;
