--- a/git2.html
+++ b/git2.html
@@ -249,7 +249,7 @@ window.onresize=function(){
   var style = document.createElement('style');             
   style.innerHTML = "textarea{height:"+ (wh-ctr_h-page_h-ins_h-26)+"px;}";
   document.head.appendChild(style);
- alert(4)
+ //alert(4)
   /*//动态添加外置样式表    
   var  link = document.createElement('link');
   link.setAttribute('rel', 'stylesheet');
