--- a/git2.html
+++ b/git2.html
@@ -55,6 +55,10 @@ input[value^="page"] {
   bottom:0px;
   //display:none;
 }
+.top_box{
+ width:100%;
+  height:46px;
+}
 .control_box{
   width:100%;
 height:24px;
