--- a/git2.html
+++ b/git2.html
@@ -61,7 +61,7 @@ input[value^="page"] {
 }
 .control_box{
   width:100%;
-height:24px;
+  height:24px;
   overflow-x:scroll;
   //position:fixed;
   //top:0px;
@@ -262,7 +262,7 @@ window.onresize=function(){
   document.head.appendChild(link);
   */
   //edit_box.style.marginBottom=ctr_h+"px;
-  page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
   
 }
 
