--- a/git2.html
+++ b/git2.html
@@ -47,7 +47,7 @@ input[value^="page"] {
   padding:0px;
   width:40px;
 }
-.ins_box{
+/*.ins_box{
   width:100%;
   overflow-x:scroll;
   white-space:nowrap;
@@ -91,7 +91,7 @@ input[value^="page"] {
     margin-bottom:30px;
   }
   .ins_box{display:block;}
-}
+}*/
 </style>
 </head>
 <body>
@@ -262,7 +262,7 @@ window.onresize=function(){
   document.head.appendChild(link);
   */
   //edit_box.style.marginBottom=ctr_h+"px;
-  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
   
 }
 
