--- a/git2.html
+++ b/git2.html
@@ -95,6 +95,7 @@ input[value^="page"] {
 </style>
 </head>
 <body>
+<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 <div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
