--- a/git2.html
+++ b/git2.html
@@ -95,7 +95,9 @@ input[value^="page"] {
 </style>
 </head>
 <body>
+<div>1234
 <input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+</div>
 <div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
