--- a/git2.html
+++ b/git2.html
@@ -95,7 +95,16 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div>1234
+<div>1234-1
+<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+</div >
+<div id="top1_box">1234-2
+<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+</div >
+<div class="top1_box" id="top1_txt">1234-3
+<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+</div>
+<div class="top1_box">1234-4
 <input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 </div>
 <div class="top_box" id="top_box">
