--- a/git2.html
+++ b/git2.html
@@ -47,7 +47,7 @@ input[value^="page"] {
   padding:0px;
   width:40px;
 }
-/*.ins_box{
+.ins_box{
   width:100%;
   overflow-x:scroll;
   white-space:nowrap;
@@ -91,7 +91,7 @@ input[value^="page"] {
     margin-bottom:30px;
   }
   .ins_box{display:block;}
-}*/
+}
 </style>
 </head>
 <body>
