--- a/git2.html
+++ b/git2.html
@@ -80,7 +80,7 @@ input[value^="page"] {
   width:100%;
   //margin-top:50px;
 }
-@media (max-height: 700px) {
+/*@media (max-height: 700px) {
   //body{background-color:orange;}
   .ins{display:none;}
 }
@@ -91,7 +91,7 @@ input[value^="page"] {
     margin-bottom:30px;
   }
   .ins_box{display:block;}
-}
+}*/
 </style>
 </head>
 <body>
