--- a/git2.html
+++ b/git2.html
@@ -55,7 +55,7 @@ input[value^="page"] {
   bottom:0px;
   //display:none;
 }
-.top_box{
+/*.top_box{
  width:100%;
   height:46px;
 }
@@ -79,7 +79,7 @@ input[value^="page"] {
 .edit_box{
   width:100%;
   //margin-top:50px;
-}
+}*/
 /*@media (max-height: 700px) {
   //body{background-color:orange;}
   .ins{display:none;}
@@ -274,7 +274,7 @@ window.onresize=function(){
   document.head.appendChild(link);
   */
   //edit_box.style.marginBottom=ctr_h+"px;
-  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
   
 }
 
