--- a/git2.html
+++ b/git2.html
@@ -95,8 +95,8 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div class="top_box" id="top_box1">
-		<div class="control_box" id="control_box1">
+<div class="top_box" >2
+		<div class="control_box" >
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
 				<input type="button" value='file' onclick='alert()'/>
