--- a/git2.html
+++ b/git2.html
@@ -94,7 +94,7 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>
+<body>2#t
 <div class="top_box" >2
 		<div class="control_box" >
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
