--- a/git3.html
+++ b/git3.html
@@ -58,7 +58,7 @@ input[value^="page"] {
 /*.top_box{
  width:100%;
   height:46px;
-}
+}*/
 .control_box{
   width:100%;
   height:24px;
@@ -66,7 +66,6 @@ input[value^="page"] {
   //position:fixed;
   //top:0px;
 }
-*/
 .page_box{
   width:100%;
   height:23px;
@@ -95,18 +94,27 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>
-<div>1234-123
-<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
-</div >
-<div id="top1_box">1234-2
-<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
-</div >
-<div class="top1_box" id="top1_txt">1234-3
-<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
-</div>
-<div class="top1_box">1234-4
-<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+<body>2#t
+<div>
+		<div class="control_box" >
+				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+				<input type="button" value='reload' onclick='location.reload()'/>
+				<input type="button" value='file' onclick='alert()'/>
+		  <input type="button" value="write" onclick="w()"/>
+		  <input type="button" value="read" onclick="read()"/>
+		  <input type="button" value="add" onclick="add()"/>
+		  <input type="button" value="del" onclick="d()"/>
+		  <input type="button" value="open" onclick='var obj = window.open("about:blank");obj.document.write(page.txt.value);'/>
+		  <input type="button" value="打开" onclick='window.open(page.name.value);'/>
+		</div>
+		<div class="page_box" id="page_box1" oncontextmenu="alert()" ondblclick="alert(event.srcElement.value)">
+				<input id="button11" type="button" value="page1" 	style="color:red;"		onclick="shift(1)">
+				<input id="button12" type="button" value="page2" onclick="shift(2);">
+				<input id="button13" type="button" value="page3" onclick="shift(3);">
+				<input id="button14" type="button" value="page4" onclick="shift(4);">
+				<input id="button15" type="button" value="page5" onclick="shift(5);">
+				<input id="button16" type="button" value="page6" onclick="shift(6);">
+		</div>
 </div>
 <div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
