--- a/git3.html
+++ b/git3.html
@@ -94,8 +94,8 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>2#t
-<div>
+<body>2#tggggg
+<div class="ins">
 		<div class="control_box" >
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
