--- a/git2.html
+++ b/git2.html
@@ -94,9 +94,9 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>2#t
-<div class="top_box" >2
-		<div class="control_box" >
+<body>2#tggggg
+<div class="ins">
+		<div >
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
 				<input type="button" value='file' onclick='alert()'/>
