--- a/git3.html
+++ b/git3.html
@@ -116,7 +116,7 @@ input[value^="page"] {
 				<input id="button16" type="button" value="page6" onclick="shift(6);">
 		</div>
 </div>
-<div class="top_box" id="top_box">
+<div class="ins_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
