--- a/git2.html
+++ b/git2.html
@@ -94,7 +94,7 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>2#tggggg
+<body>2
 <div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
