--- a/git2.html
+++ b/git2.html
@@ -94,8 +94,8 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>2
-<div class="top_box" id="top_box">
+<body>2#
+<div class="top_box1" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
