--- a/git2.html
+++ b/git2.html
@@ -55,9 +55,9 @@ input[value^="page"] {
   bottom:0px;
   //display:none;
 }
-.top_box{
- width:100%;
-  height:46px;
+.top_box1{
+  width:100%;
+  height:60px;
 }
 .control_box{
   width:100%;
@@ -94,7 +94,7 @@ input[value^="page"] {
 }*/
 </style>
 </head>
-<body>2#
+<body>
 <div class="top_box1" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
