--- a/git2.html
+++ b/git2.html
@@ -57,7 +57,7 @@ input[value^="page"] {
 }
 .top_box1{
   width:100%;
-  height:60px;
+  height:47px;
 }
 .control_box{
   width:100%;
@@ -262,7 +262,7 @@ window.onresize=function(){
   document.head.appendChild(link);
   */
   //edit_box.style.marginBottom=ctr_h+"px;
-  page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
   
 }
 
