--- a/git1.html
+++ b/git1.html
@@ -90,7 +90,7 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div class="top_box" id="top_box">
+<div class="top_box1" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
