--- a/git2.html
+++ b/git2.html
@@ -9,8 +9,11 @@
 <script src="js/_ini.js"></script>
 <!--<script src="script/git.js?i=8"></script>
 -->
-<script src="http://git.docfeng.top/script/git.js?i=1"></script>
+<script src="script/git.js?i=9"></script>
+<script src="script/db.js?i=4"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+
+<script src="script/store.js?i=4"></script>
 
 <script>var ttt="";</script>
 <style type="text/css">
@@ -94,7 +97,7 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div class="top_box1" id="top_box">
+<div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
@@ -316,6 +319,9 @@ show_ins=function(){
 hide_ins=function(){
   ins_box.style.display="none";
 }
+window.addEventListener('load',function(){
+  myStorage=new myStorage(function(){git=new git();});
+}, false);
 </script>
 </body>
 </html>
