--- a/git2.html
+++ b/git2.html
@@ -7,10 +7,10 @@
 <META HTTP-EQUIV="expires" CONTENT="0">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <script src="js/_ini.js"></script>
-<!--<script src="script/git.js?i=8"></script>
+<!--<script src="script/git.js?i=1"></script>
 -->
-<script src="script/git.js?i=9"></script>
-<script src="script/db.js?i=4"></script>
+<script src="script/git.js?i=1"></script>
+<script src="script/db.js?i=1"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 
 <script src="script/store.js?i=4"></script>
@@ -97,7 +97,7 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div class="top_box1" id="top_box">
+<div class="top_box" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
