--- a/git2.html
+++ b/git2.html
@@ -13,7 +13,7 @@
 <script src="script/db.js?i=1"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 
-<script src="script/store.js?i=4"></script>
+<script src="script/store.js?i=1"></script>
 
 <script>var ttt="";</script>
 <style type="text/css">
@@ -97,7 +97,7 @@ input[value^="page"] {
 </style>
 </head>
 <body>
-<div class="top_box" id="top_box">
+<div class="top_box1" id="top_box">
 		<div class="control_box" id="control_box">
 				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
 				<input type="button" value='reload' onclick='location.reload()'/>
