--- a/git.html
+++ b/git.html
@@ -6,89 +6,141 @@
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<script src="js/_ini.js"></script>
+<!--<script src="script/git.js?i=1"></script>
+-->
+<script src="script/git.js?i=1"></script>
+<script src="script/db.js?i=1"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 
+<script src="script/store.js?i=1"></script>
 
+<script>var ttt="";</script>
 <style type="text/css">
+html,body{
+  width:100%;
+  height:100%;
+  overflow-y:hidden;
+}
 body{ 
   margin: 0px;
   padding: 0px;
-  font-size:14px; 
-  line-height:24px;
+  //font-size:14px; 
+  //line-height:24px;
 } 
 textarea{
   width:100%;
-  height:440px;
+  height:90%;
   font: 0.7em Arial, Helvetica, sans-serif;
+}
+body:focus input
+{
+background-color:yellow;
 }
 *{margin:0px;padding:0px;}
 input[onclick^="ins"] {
   margin:0px;
   padding:0px;
-  width:18px;
+  width:25px;
+  height:25px;
+}
+input[onclick^="shift"] {
+  margin:0px;
+  padding:0px;
+  width:60px;
+}
+input[value^="page"] {
+  margin:0px;
+  padding:0px;
+  width:40px;
+}
+.ins_box{
+  width:100%;
+  overflow-x:scroll;
+  white-space:nowrap;
+  position:fixed;
+  bottom:0px;
+  display:none;
+}
+.control_box{
+  width:100%;
+  overflow-x:scroll;
+  //position:fixed;
+  //top:0px;
+}
+.page_box{
+  width:100%;
+  //height:23px;
+  //position:fixed;//absolute;
+  //top:20px;
+  //margin-top:20px;
+  	//Word-break: break-all;
+  	overflow-x: auto;
+  	white-space:nowrap;
+}
+.edit_box{
+  width:100%;
+  //margin-top:50px;
+}
+@media (max-height: 700px) {
+  //body{background-color:orange;}
+  .ins{display:none;}
+}
+ 
+@media (max-height: 400px) {
+  //body{background-color:OrangeRed;}
+  .edit_box{
+    margin-bottom:30px;
+  }
+  .ins_box{display:block;}
 }
 </style>
-<script src="js/_ini.js"></script>
-<!--<script src="script/git.js?i=8"></script>
---><script src="http://git.docfeng.top/script/git.js?i=1"></script>
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
-<script>var ttt="";</script>
 </head>
 <body>
-<input type="button" value='.' 
-onclick="ins('.')" />
-<input type="button" value="a" 
-onclick="ins('alert()')"/>
-<input type="button" value='""' 
-onclick="ins('&quot;&quot;')"/>
-<input type="button" value='=' 
-onclick="ins('=')" />
-<input type="button" value='f' 
-onclick="ins('function(){}')" />
-<input type="button" value='[]' 
-onclick="ins('[]')" />
-<input type="button" value='{}' 
-onclick="ins('{}')" />
-<input type="button" value='{' 
-onclick="ins('{')" />
-<input type="button" value='}' 
-onclick="ins('}')" />
-<input type="button" value='\' 
-onclick="ins('\\')" />
-<input type="button" value='+' 
-onclick="ins('+')" />
-<input type="button" value='del' 
-onclick="del()" />
-<input type="button" value='eval' 
-onclick="eval(page.txt.value)" />
-<input type="button" value='reload' onclick='location.reload()'/>
-<input type="button" value='file' onclick='/*alert(fso.createFile("1.js"))*/'/>
-<br/>
-<input id="button1" type="button" value="page1" 
-style="color:red;"
-onclick="shift(1)">
-<input id="button2" type="button" value="page2" onclick="shift(2);">
-<input id="button3" type="button" value="page3" onclick="shift(3);">
-<input id="button4" type="button" value="page4" onclick="shift(4);">
-<input id="button5" type="button" value="page5" onclick="shift(5);">
-<input id="button6" type="button" value="page6" onclick="shift(6);">
+<div class="top_box1" id="top_box">
+		<div class="control_box" id="control_box">
+				<input type="button" value='eval' 		onclick="eval(page.txt.value)" />
+				<input type="button" value='reload' onclick='location.reload()'/>
+				<input type="button" value='file' onclick='/*alert(fso.createFile("1.js"))*/'/>
+		  <input type="button" value="write" onclick="w()"/>
+		  <input type="button" value="read" onclick="read()"/>
+		  <input type="button" value="add" onclick="add()"/>
+		  <input type="button" value="del" onclick="d()"/>
+		  <input type="button" value="open" onclick='var obj = window.open("about:blank");obj.document.write(page.txt.value);'/>
+		  <input type="button" value="打开" onclick='window.open(page.name.value);'/>
+		</div>
+		<div class="page_box" id="page_box" oncontextmenu="alert()" ondblclick="alert(event.srcElement.value)">
+				<input id="button1" type="button" value="page1" 	style="color:red;"		onclick="shift(1)">
+				<input id="button2" type="button" value="page2" onclick="shift(2);">
+				<input id="button3" type="button" value="page3" onclick="shift(3);">
+				<input id="button4" type="button" value="page4" onclick="shift(4);">
+				<input id="button5" type="button" value="page5" onclick="shift(5);">
+				<input id="button6" type="button" value="page6" onclick="shift(6);">
+		</div>
+</div>
+<div class="ins_box" id="ins_box" >
+		<input type="button" value='.' 	onclick="ins('.')" />
+		<input type="button" value="a" 		onclick="ins('alert()')"/>
+		<input type="button" value='""' 		onclick="ins('&quot;&quot;')"/>
+		<input type="button" value='=' 		onclick="ins('=')" />
+		<input type="button" value='f' 		onclick="ins('function(){}')" />
+		<input type="button" value='[]' 		onclick="ins('[]')" />
+		<input type="button" value='{}' 		onclick="ins('{}')" />
+		<input type="button" value='{' 		onclick="ins('{')" />
+		<input type="button" value='}' 		onclick="ins('}')" />
+		<input type="button" value='\' 		onclick="ins('\\')" />
+		<input type="button" value='+' 		onclick="ins('+')" />
+		<input type="button" value='<<<' 		onclick="del()" />
+</div>
 
-<form id="page0">
-Name: <input type="text" name="name" size=6 />
-<input type="button" value="write" 
-onclick="w()"/>
-<input type="button" value="read" 
-onclick="read()"/>
-<input type="button" value="add" 
-onclick="add()"/>
-<input type="button" value="del" 
-onclick="d()"/>
-<input type="button" value="open" 
-onclick='var obj = window.open("about:blank");            obj.document.write(page.txt.value);'/>
-<input type="button" value="打开" 
-onclick='window.open(page.name.value);'/>
-<br>
-<textarea name="txt" ></textarea>
-</form>
+<div class="edit_box" id="edit_box">
+ <form id="page0" style="height:100%;width:100%">
+	Name: <input type="text" name="name" size=20 />
+	<br>
+	<textarea name="txt" ></textarea>
+	<!--onfocus="show_ins()" onblur="hide_ins()"-->
+	</form>
+</div>
 <script>
 var page;
 var index=1;
@@ -189,8 +241,38 @@ window.onload=function(){
   addForm(3);addForm(4);
   addForm(5);addForm(6);
   shift(1);
+  window.onresize();
+}
+window.onresize=function(){
+  //window.innerHeight<400?show_ins():hide_ins();
+  var wh=window.innerHeight;
+  var ctr_h=parseInt(window.getComputedStyle(control_box).height);
+  var page_h=parseInt(window.getComputedStyle(page_box).height);
+  var ins_h=parseInt(window.getComputedStyle(ins_box).height)||0;
+  //var edit_h=parseInt(window.getComputedStyle(edit_box).height);
+  //alert(window.getComputedStyle(ins_box).height);
+  
+  edit_box.style.height=(wh-ctr_h-page_h-ins_h)+"px";
+  var style = document.createElement('style');             
+  style.innerHTML = "textarea{height:"+ (wh-ctr_h-page_h-ins_h-26)+"px;}";
+  document.head.appendChild(style);
+ 
+  /*//动态添加外置样式表    
+  var  link = document.createElement('link');
+  link.setAttribute('rel', 'stylesheet');
+  link.setAttribute('type', 'text/css');
+  link.setAttribute('href', 'index.css');  //已经存在这个index.css文件
+  document.head.appendChild(link);
+  */
+  //edit_box.style.marginBottom=ctr_h+"px;
+  //page.txt.value=window.innerHeight+"\n"+ctr_h+"\n"+page_h+"\n"+ins_h
+  
 }
 
+window.onerror = function(sMessage, sUrl, sLine) {
+     alert("发生错误！\n" + sMessage + "\nURL:" + sUrl + "\nLine Number:" + sLine);
+     return true;
+}
 addForm=function(i){
   var clonedNode = page0.cloneNode(true);
   clonedNode.setAttribute("id", "page" + i); 
@@ -230,6 +312,16 @@ post=function(path,str,fun) {
   xmlHttp.send(str); 
   //xmlHttp=null;
 }
+
+show_ins=function(){
+  ins_box.style.display="block";
+}
+hide_ins=function(){
+  ins_box.style.display="none";
+}
+window.addEventListener('load',function(){
+  myStorage=new myStorage(function(){git=new git();});
+}, false);
 </script>
 </body>
 </html>
