--- a/git.html
+++ b/git.html
@@ -85,8 +85,18 @@ input[value^="page"] {
 @media (max-height: 700px) {
   //body{background-color:orange;}
   .ins{display:none;}
+  body{
+    font: 2em;
+  }
+  textarea{
+    font: 2em;
+  }
+  
 }
- 
+@media (max-height: 7000px) {
+  //body{background-color:orange;}
+  .ins{display:none;}
+}
 @media (max-height: 400px) {
   //body{background-color:OrangeRed;}
   .edit_box{
