--- a/git.html
+++ b/git.html
@@ -86,10 +86,13 @@ input[value^="page"] {
   //body{background-color:orange;}
   .ins{display:none;}
   body{
-    font: 2em;
+    font-size: 2em;
   }
   textarea{
-    font: 2em;
+    font-size: 2em;
+  }
+  input{
+    font-size:2m;
   }
   
 }
