--- a/git.html
+++ b/git.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="pragma" CONTENT="no-cache"> 
+< meta content=”yes” name=”apple-mobile-web-app-capable” />
 <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
@@ -86,10 +87,10 @@ input[value^="page"] {
   //body{background-color:orange;}
   .ins{display:none;}
   body{
-    font-size: 2em;
+    font-size: 1.5em;
   }
   textarea{
-    font-size: 2em;
+    //font-size: 2em;
   }
   input{
     font-size:2m;
