--- a/git.html
+++ b/git.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="apple-mobile-web-app-title" content="github文件读写">
 <META HTTP-EQUIV="pragma" CONTENT="no-cache"> 
-< meta content=”yes” name=”apple-mobile-web-app-capable” />
+<meta name="apple-mobile-web-app-capable" content="yes" /> 
+<meta name="apple-touch-fullscreen" content="yes" />
 <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
