--- a/git.html
+++ b/git.html
@@ -97,6 +97,9 @@ input[value^="page"] {
   input{
     font-size:1em;
   }
+input[onclick^="shift"] {
+  width:260px;
+}
   
 }
 @media (max-height: 700px) {
