--- a/git.html
+++ b/git.html
@@ -68,6 +68,7 @@ input[value^="page"] {
 .control_box{
   width:100%;
   overflow-x:scroll;
+white-space:nowrap;
   //position:fixed;
   //top:0px;
 }
