--- a/git.html
+++ b/git.html
@@ -86,6 +86,29 @@ white-space:nowrap;
   width:100%;
   //margin-top:50px;
 }
+/**
+所有 iPad Media Queries
+**/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+}
+/**
+iPad 横屏
+**/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+}
+/**
+**  iPad 竖屏
+**/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+}
 @media (max-height: 7000px) {
   //body{background-color:orange;}
   .ins{display:none;}
