--- a/git.html
+++ b/git.html
@@ -123,7 +123,10 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : portrait) {
 }
-
+/* 手机 */
+@media all and (max-width: 768px) {
+  textarea{font: 0.7em Arial, Helvetica, sans-serif;}
+}
 @media (max-height: 700px) {
   //body{background-color:orange;}
   .ins{display:none;}
