--- a/git.html
+++ b/git.html
@@ -35,6 +35,7 @@ textarea{
   width:100%;
   height:90%;
   font: 0.7em Arial, Helvetica, sans-serif;
+  white-space:nowrap;
 }
 body:focus input
 {
