--- a/git.html
+++ b/git.html
@@ -35,7 +35,7 @@ textarea{
   width:100%;
   height:90%;
   font: 0.7em Arial, Helvetica, sans-serif;
-  white-space:nowrap;
+  //white-space:nowrap;
 }
 body:focus input
 {
@@ -126,7 +126,10 @@ and (orientation : portrait) {
 }
 /* 手机 */
 @media all and (max-width: 768px) {
-  textarea{font: 0.7em Arial, Helvetica, sans-serif;}
+  textarea{
+    font: 0.7em Arial, Helvetica, sans-serif;
+    white-space:nowrap;
+   }
 }
 @media (max-height: 700px) {
   //body{background-color:orange;}
