--- a/getky.html
+++ b/getky.html
@@ -77,6 +77,8 @@ onclick="read()"/>
 onclick='var obj = window.open("about:blank");            obj.document.write(page.txt.value);'/>
 <input type="button" value="打开" 
 onclick='window.open(page.name.value);'/>
+<input type="button" value="跨域" 
+onclick='get_ky(page.name.value,function(a){page.txt.value=a;});'/>
 <br>
 <textarea name="txt" ></textarea>
 </form>
