--- a/getky.html
+++ b/getky.html
@@ -6,6 +6,7 @@
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<script src="script/githubapi.js?i=1"></script>
 <style type="text/css">
 body{ 
   margin: 0px;
