--- a/git.html
+++ b/git.html
@@ -12,6 +12,7 @@
 <script src="js/_ini.js"></script>
 <!--<script src="script/git.js?i=1"></script>
 -->
+<script src="script/http.js?i=1"></script>
 <script src="script/git.js?i=1"></script>
 <script src="script/db.js?i=1"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
