--- a/list.html
+++ b/list.html
@@ -58,10 +58,10 @@ input[type=number]{
             count:<input type="text" size=4 id="listcount">
             <input type="number" min=0 max=1000 onchange="List.scroll(this.value)" />
             <input type="button" value="换源" onclick="funcs.getsearch(listname.value);" />
-            <input type="button" value='更新' onclick="List.update(listurl.value)" />  
+            <input type="button" value='更新' onclick="funcs.update(listurl.value)" />  
             
         <div id=s1 style="height:95%;overflow-x:hidden;overflow-y:auto;">
-            <table id="list_table" onclick="List.tableFun(event.srcElement);"></table>
+            <table id="list_table" onclick="funcs.tableFun(event.srcElement);"></table>
         </div>
     </div>       
  <!--结束-->
@@ -77,7 +77,24 @@ window.onresize=function(){
    //n.resize();
 }
 
-var _index=0;
+funcs={
+    async update(url){
+        var html=await http.get(url,{cors:true});
+        var arr =await bds.formatlist({html,url})
+        alert(arr)
+        this.showlist(arr);
+    },
+    showlist(arr){
+        var txt1=""
+        for(var i=0;i<30;i++){
+            var txt2="<tr><td><h3>"+arr[i][0]+"</h3><h4>"+arr[i][1]+"</h4><h4>"+arr[i][2]+"</h4></td></tr>";
+            txt1+=txt2;
+        }
+        list_table.innerHTML=txt1;
+    }
+}
+
+
 //window.addeventlistener("resize",function(){alert()},false);
 
 
