--- a/list.html
+++ b/list.html
@@ -61,7 +61,7 @@ input[type=number]{
             <input type="button" value='更新' onclick="funcs.update(listurl.value)" />  
             
         <div id=s1 style="height:95%;overflow-x:hidden;overflow-y:auto;">
-            <table id="list_table" onclick="funcs.tableFun(event.srcElement);"></table>
+            <table id="list_table" onclick="funcs.showpage(event.srcElement);"></table>
         </div>
     </div>       
  <!--结束-->
