--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <base href="http://git.docfeng.top/" />
-<title>小说下载</title>
+<title>目录</title>
 <script src="http://git.docfeng.top/script/http.js"></script>
 <script src="http://git.docfeng.top/script/base.js"></script>
 <script src="http://git.docfeng.top/script/fso.js"></script>
