--- a/list.html
+++ b/list.html
@@ -122,15 +122,14 @@ funcs={
                  }
             }  
             txt=txt?txt[1]:"";
-alert(txt)
+           //alert(txt)
             //匹配下一章地址
             var reg=/<a[^>]*?href="([^"]*?)"[^>]*?>下[^<]*?</;
             var nexturl=html.match(reg);
-alert(nexturl)
             nexturl=nexturl?nexturl[1]:"";
             nexturl=nexturl.getFullUrl(json.url);
             //是否有分章
-            if(nexturl.indexOf("_")>nexturl.length-8){
+            if(nexturl && nexturl.indexOf("_")>nexturl.length-8){
                 let html=await http.get(nexturl,{cors:true});
                 let t=await format({"html":html,"url":nexturl});
                txt+=t;
