--- a/list.html
+++ b/list.html
@@ -131,9 +131,11 @@ funcs={
             //是否有分章
             if(nexturl && nexturl.indexOf("_")>nexturl.length-8 && nexturl.length-nexturl.indexOf("/")>5){
                 alert(nexturl)
-                let html=await http.get(nexturl,{cors:true});
-                let t=await format({"html":html,"url":nexturl});
+                let html2=await http.get(nexturl,{cors:true});
+                if(html!=html2){
+                let t=await format({"html":html2,"url":nexturl});
                txt+=t;
+               }
             }
             return txt;
         }
