--- a/eval.html
+++ b/eval.html
@@ -155,7 +155,7 @@ and (orientation : portrait) {
 		  <input type="button" value="read" onclick="read()"/>
 		  <input type="button" value="add" onclick="add()"/>
 		  <input type="button" value="del" onclick="d()"/>
-		  <input type="button" value="hide" onclick='window.top.ifr1.style="none";'/>
+		  <input type="button" value="hide" onclick='window.top.ifr1.style.display="none";'/>
 		</div>
 		<div class="page_box" id="page_box" oncontextmenu="alert()" ondblclick="alert(event.srcElement.value)">
 				<input id="button1" type="button" value="page1" 	style="color:red;"		onclick="shift(1)">
