--- a/search2.html
+++ b/search2.html
@@ -146,7 +146,7 @@ showEval=function(a){
     if(!window.ifr1){
     var ifr=document.createElement("iframe");
     ifr.id="ifr1";
-    body.appendChild(ifr);
+    window.body.appendChild(ifr);
     ifr.src="http://git.docfeng.top/eval.html"
   
   ifr.style="width:100%;height:100%;position:absolute;top:0px;left:0px;";
