--- a/search2.html
+++ b/search2.html
@@ -146,6 +146,7 @@ showEval=function(a){
     if(!window.ifr1){
     var ifr=document.createElement("iframe");
     ifr.id="ifr1";
+    alert(document.body)
     document.body.appendChild(ifr);
     ifr.src="http://git.docfeng.top/eval.html"
   
