--- a/list.html
+++ b/list.html
@@ -32,7 +32,7 @@ input[type=number]{
 }
 </style>
 <body>
-<input type="button" value="showEval" onclick="showEval();" />
+<input type="button" value="showEval" onclick="showEval();" /><br />
             name:<input type="text" size=8 id="listname" />
             url:<input type="text" size=14 id="listurl" />
             <br/>
