--- a/list.html
+++ b/list.html
@@ -14,7 +14,6 @@
 <script src="http://git.docfeng.top/script/http.js"></script>
 <script src="http://git.docfeng.top/script/base.js"></script>
 <script src="http://git.docfeng.top/script/fso.js"></script>
-<script src="http://git.docfeng.top/script/menu.js"></script>
 <script src="http://git.docfeng.top/script/bds.js"></script>
 <link rel="stylesheet" href="http://git.docfeng.top/css/main.css" type="text/css"></link> 
 <link rel="stylesheet" href="css/test.css" type="text/css">
@@ -48,8 +47,8 @@ input[type=number]{
 <script>
 window.onload=function(){
   var hash1=hash();
-  listname.value=funcs.name=hash1.name;
-  listurl.value=hash1.url;
+  listname.value=funcs.name=hash1.name||"";
+  listurl.value=hash1.url||"";
 }
 	
 window.onresize=function(){ 
