--- a/eval.html
+++ b/eval.html
@@ -148,7 +148,7 @@ and (orientation : portrait) {
 <body>
 <div class="top_box1" id="top_box">
 		<div class="control_box" id="control_box">
-				<input type="button" value='eval' onclick="window.top.postMessage({data:page.txt.value},\"*\")" />
+				<input type="button" value='eval' onclick="window.top.postMessage({data:page.txt.value},'*')" />
 				<input type="button" value='reload' onclick='location.reload()'/>
 				<input type="button" value='file' onclick='/*alert(fso.createFile("1.js"))*/'/>
 		  <input type="button" value="write" onclick="w()"/>
